# HFT_Alristrol_Aventador

./: .gitmessage.txt  CMakeLists.txt  README.md
include/common/: auth.hpp
include/core/: disruptor.hpp  market_data.hpp  strategy.hpp
include/network/: feed_handler.hpp
src/: main.cpp
src/common/: auth.cpp
src/core/: strategy.cpp
src/network/: feed_handler.cpp
test/: test_main.cpp
